# win-runner

./: .gitignore  README.md  install.ps1  pyproject.toml
docs/: windows-setup-manual.md
scripts/: probe.ps1  register-daemons.ps1  unregister-daemons.ps1  win-runner.ps1
tasks/: hello.md
tests/: test_memory.py  test_parser.py  test_provider.py  test_queue.py  test_resume.py  test_router.py  test_scheduler.py
win_runner/: __init__.py  __main__.py  claude.py  cli.py  filelock.py  gemini.py  memory.py  parser.py  paths.py  provider.py  queue.py  resume.py  router.py  runner.py  scheduler.py  state.py  status_server.py  tui.py  verify.py
